# point_processes_simulation

./: .gitignore  README.md  StraussProcessMCMC.ipynb  app.py  bdm.py  helper.py  kernels.py  main.py  performance_tester.py  point_process.py  pyproject.toml  regions.py  requirements.txt
scripts/: app.py  performance_tester.py
src/: bdm.py  kernels.py  point_process.py  regions.py
src/densities/: __init__.py  base.py  hardcore.py  poisson.py  saturated.py  strauss.py  utils.py
src/samplers/: bdm.py  kernels.py
