[project]
name = "python-project"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "black==25.1.0",
    "cython>=3.1.3",
    "flake8==7.3.0",
    "notebook>=7.4.5",
    "pandas-stubs==2.3.2.250827",
    "plotly>=6.3.0",
    "pytest>=8.4.2",
    "seaborn==0.13.2",
    "streamlit==1.48.0",
]
